Create main files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=HLCoursesAppServer
+
+jwt.secret=MySecretKey
+jwt.expirationMs=3600000
+
+# application.properties
+spring.datasource.url=jdbc:postgresql://aws-0-eu-central-1.pooler.supabase.com:6543/postgres
+spring.datasource.username=postgres.adqhyptxkdcjgauoxvpo
+spring.datasource.password=SRlgBdqMUK0lZcNx
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ????????? Hibernate (???????????)
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
