Add registration and authorisation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,6 @@ spring.datasource.username=postgres.adqhyptxkdcjgauoxvpo
 spring.datasource.password=SRlgBdqMUK0lZcNx
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# ????????? Hibernate (???????????)
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.transaction.jta.platform=org.hibernate.service.jta.platform.internal.NoJtaPlatform
 
+spring.jpa.open-in-view=false
