--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.3.4</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 
 	<groupId>org.example</groupId>
@@ -17,7 +17,7 @@
 	<description>Server for Health and Wellness Courses Application</description>
 
 	<properties>
-		<java.version>17</java.version> <!-- Используем Java 17, которая является LTS версией -->
+		<java.version>17</java.version>
 	</properties>
 
 	<dependencies>
@@ -48,6 +48,7 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
+			<version>42.7.2</version>
 		</dependency>
 
 		<!-- Testing dependencies -->
@@ -62,30 +63,32 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
+		<!-- JSON Web Token (JWT) -->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
-			<artifactId>jjwt</artifactId>
-			<version>0.12.6</version>
+			<artifactId>jjwt-api</artifactId>
+			<version>0.11.5</version>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-impl</artifactId>
+			<version>0.11.5</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-jackson</artifactId> <!-- for JSON parsing if needed -->
+			<version>0.11.5</version>
+			<scope>runtime</scope>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
+		<!-- Jakarta Servlet API for Spring Boot 3.x -->
 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>2.3</version>
+			<groupId>jakarta.servlet</groupId>
+			<artifactId>jakarta.servlet-api</artifactId>
+			<version>5.0.0</version>
 			<scope>provided</scope>
 		</dependency>
-
-
-		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-web</artifactId>
-			<version>6.3.4</version>
-		</dependency>
-
-
 	</dependencies>
 
 	<build>
@@ -97,7 +100,6 @@
 		</plugins>
 	</build>
 
-	<!-- Optional: SCM and developer information -->
 	<scm>
 		<connection>scm:git:git://github.com/username/HLCoursesAppServer.git</connection>
 		<developerConnection>scm:git:ssh://github.com/username/HLCoursesAppServer.git</developerConnection>
