Change of functions for working with users.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,6 @@ spring.datasource.hikari.idle-timeout=300000
 # 3 seconds
 spring.datasource.hikari.validation-timeout=3000
 spring.datasource.hikari.connection-test-query=SELECT 1
+
+# logging.level.org.hibernate.SQL=DEBUG
+# logging.level.org.springframework=DEBUG
