--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,14 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-oauth2-client -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-oauth2-client</artifactId>
+			<version>6.4.2</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
