Edit update birthDate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,5 +27,8 @@ spring.datasource.hikari.idle-timeout=300000
 spring.datasource.hikari.validation-timeout=3000
 spring.datasource.hikari.connection-test-query=SELECT 1
 
+spring.jackson.date-format=yyyy-MM-dd
+spring.jackson.serialization.write-dates-as-timestamps=false
+
 # logging.level.org.hibernate.SQL=DEBUG
 # logging.level.org.springframework=DEBUG
