Edit work with ProfilePhoto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,5 +30,9 @@ spring.datasource.hikari.connection-test-query=SELECT 1
 spring.jackson.date-format=yyyy-MM-dd
 spring.jackson.serialization.write-dates-as-timestamps=false
 
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+
 # logging.level.org.hibernate.SQL=DEBUG
 # logging.level.org.springframework=DEBUG
