--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=HLCoursesAppServer
 server.port=8080
 
-# ???? ?????? (Supabase)
+# Database (Supabase)
 spring.datasource.url=jdbc:postgresql://aws-0-eu-central-1.pooler.supabase.com:6543/postgres?prepareThreshold=0
 spring.datasource.username=postgres.adqhyptxkdcjgauoxvpo
 spring.datasource.password=SRlgBdqMUK0lZcNx
@@ -54,9 +54,9 @@ google.drive.profile-photos-folder-id=1fTKb6ARwNhdNVN0fVyXcPsKH4rCdRgdl
 
 # ???????????
 logging.level.root=INFO
-logging.level.org.example.hlcoursesappserver=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#logging.level.org.example.hlcoursesappserver=DEBUG
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.file.name=logs/hlcoursesapp.log
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
