--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,17 @@ spring.datasource.username=postgres.adqhyptxkdcjgauoxvpo
 spring.datasource.password=SRlgBdqMUK0lZcNx
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# Email (SMTP)
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=an.dobroserdova@gmail.com
+spring.mail.password=lkca giem mbmn ejiq
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
 # HikariCP
 spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.maximum-pool-size=10
