--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,11 +60,11 @@ cors.allowed-methods=GET,POST,PUT,DELETE
 cors.allowed-headers=*
 cors.allow-credentials=false
 
-# Google Drive (????????????????, ??? ??? ???????????? ????????? ?????????)
-#google.drive.credentials.path=/credentials.json
-#google.drive.tokens.directory=tokens
-#google.drive.auth.port=8080
-#google.drive.profile-photos-folder-id=1fTKb6ARwNhdNVN0fVyXcPsKH4rCdRgdl
+# Google Drive
+google.drive.credentials.path=/credentials.json
+google.drive.tokens.directory=tokens
+google.drive.auth.port=8080
+google.drive.profile-photos-folder-id=1fTKb6ARwNhdNVN0fVyXcPsKH4rCdRgdl
 
 # Logging
 logging.level.root=INFO
