--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -76,7 +76,7 @@ logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %m
 #logging.level.com.zaxxer.hikari=DEBUG
 
 # Security
-security.public-endpoints=/api/public/info,/api/public/status,/uploads/**
+security.public-endpoints=/api/public/info,/api/public/status
 
 # Encoding
 server.servlet.encoding.charset=UTF-8
